# LinkLynx-AI

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .trivyignore  AGENTS.md  Documentation.md  Implement.md  Makefile  Plan.md  Prompt.md  README.md  docker-compose.yml
.codex/: config.toml
.codex/agents/: explorer.toml  monitor.toml  reviewer.toml  reviewer_coding_rules.toml  reviewer_correctness.toml  reviewer_performance.toml  reviewer_security.toml  reviewer_simple.toml  reviewer_test_quality.toml  reviewer_ui.toml  reviewer_ui_guard.toml  worker.toml
.github/scripts/: codex_review.py
.github/workflows/: cd.yml  ci.yml  claude-review.yml  codex-review.yml  infra-deploy-prod.yml  security-dast.yml
database/: init.sql
database/contracts/: lin131_distributed_db_overview.md  lin135_integration_verification.md  lin139_runtime_contracts.md  lin287_scylla_primary_key_validation.md  lin288_history_cursor_contract.md  lin289_idempotent_write_contract.md  lin290_last_message_schema_validation.md  lin291_history_edge_case_verification.md  lin292_db_runtime_helpers_contract.md  lin587_session_resume_runtime_contract.md  lin588_postgres_operations_baseline.md  lin589_scylla_sor_partition_baseline.md  lin590_gcs_signed_url_and_retention_baseline.md  lin601_redpanda_event_stream_baseline.md  lin631_notion_auth_schema_gap_correction.md  lin632_spicedb_role_model_migration_contract.md  lin633_channel_user_override_spicedb_contract.md  lin634_channel_hierarchy_category_thread_contract.md  lin635_message_reply_pin_persistence_contract.md  lin636_message_reaction_persistence_contract.md  lin637_attachment_metadata_persistence_contract.md  lin803_server_channel_minimal_contract.md  lin822_minimal_moderation_contract.md  lin857_legacy_permission_assets_removal_contract.md  lin862_spicedb_namespace_relation_permission_contract.md  lin864_postgres_spicedb_tuple_sync_contract.md  lin939_profile_media_gcs_contract.md  lin948_message_create_idempotency_contract.md  lin950_v2_server_role_authz_contract.md  lin996_invite_channel_scope_contract.md
database/postgres/: channel_reads_upsert.sql  schema.sql  seed.sql  table_names.regex
database/scylla/: 001_lin139_messages.cql
designs/: discord-unified.pen
docs/: AUTHZ.md  AUTHZ_API_MATRIX.md  DATABASE.md  PYTHON.md  RUST.md  TYPESCRIPT.md  V1_TRACEABILITY.md  codex-review-ops.md
docs/adr/: ADR-001-event-schema-compatibility.md  ADR-002-class-ab-event-classification-and-delivery-boundary.md  ADR-003-search-consistency-slo-reindex.md  README.md  (+3 more)
docs/ci/: codex-review.md
elixir/: .env.example  Dockerfile  Makefile  mix.exs
infra/: README.md
python/: .env.example  Makefile  main.py  requirements-dev.txt  requirements.txt
rust/: .env.example  AGENT.md  AGENTS.md  Cargo.toml  Dockerfile  Makefile
rust/apps/api/: Cargo.toml
rust/apps/api/src/: auth.rs  authz.rs  bootstrap.rs  dm.rs  guild_channel.rs  invite.rs  main.rs  message.rs  moderation.rs  profile.rs  ratelimit.rs  scylla_health.rs  user_directory.rs
rust/apps/api/src/auth/: errors.rs  firebase.rs  metrics.rs  principal.rs  runtime.rs  service.rs  tests.rs  ws_ticket.rs
rust/apps/api/src/authz/: errors.rs  runtime.rs  service.rs  tests.rs  tuple_sync.rs
rust/apps/api/src/dm/: errors.rs  postgres.rs  runtime.rs  service.rs  tests.rs
rust/apps/api/src/guild_channel/: errors.rs  postgres.rs  runtime.rs  service.rs  tests.rs
rust/apps/api/src/invite/: errors.rs  postgres.rs  runtime.rs  service.rs  tests.rs
rust/apps/api/src/main/: http_routes.rs  realtime.rs  tests.rs  ws_routes.rs
rust/apps/api/src/message/: errors.rs  runtime.rs  service.rs  test_support.rs
rust/apps/api/src/moderation/: errors.rs  postgres.rs  runtime.rs  service.rs  tests.rs
rust/apps/api/src/profile/: errors.rs  media.rs  postgres.rs  runtime.rs  service.rs  tests.rs
rust/apps/api/src/scylla_health/: runtime.rs  service.rs  tests.rs
rust/apps/api/src/user_directory/: errors.rs  postgres.rs  runtime.rs  service.rs
rust/apps/worker/src/: main.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: lib.rs
rust/crates/contracts/message-api/: Cargo.toml
rust/crates/contracts/message-api/src/: lib.rs
rust/crates/contracts/protocol-events/: Cargo.toml
rust/crates/contracts/protocol-events/snapshots/: message_create_event_v1.json
rust/crates/contracts/protocol-events/src/: lib.rs
rust/crates/contracts/protocol-ws/: Cargo.toml
rust/crates/contracts/protocol-ws/snapshots/: dm_message_created_frame_v1.json  message_created_frame_v1.json  message_deleted_frame_v1.json
rust/crates/contracts/protocol-ws/src/: lib.rs
rust/crates/domain/: Cargo.toml
rust/crates/domains/: Cargo.toml
rust/crates/domains/message/: Cargo.toml
rust/crates/domains/message/src/: domain.rs  lib.rs  ports.rs  usecase.rs
rust/crates/domains/src/: lib.rs
rust/crates/infra/: Cargo.toml
rust/crates/infra/src/: lib.rs
rust/crates/platform/postgres/message/: Cargo.toml
rust/crates/platform/postgres/message/src/: lib.rs
rust/crates/platform/scylla/message/: Cargo.toml
rust/crates/platform/scylla/message/src/: lib.rs
rust/crates/shared/: Cargo.toml
rust/crates/shared/src/: lib.rs
rust/crates/worker/: Cargo.toml
rust/crates/worker/src/: lib.rs
rust/docs/: AGENTS.md  coding-rules.md
rust/migrations/: 0001_lin137_auth_profile.down.sql  0001_lin137_auth_profile.up.sql  0003_lin139_permissions_reads_outbox.up.sql
rust/services/batch/: Cargo.toml
rust/services/batch/src/: main.rs
rust/src/: channel_reads.rs  last_message_worker.rs  main.rs  outbox.rs  rate_limit.rs  search_indexer.rs
rust/src/contracts/: compatibility_snapshots.rs  message_api.rs  mod.rs  pagination_error.rs  protocol_events.rs  protocol_ws.rs
setup/: check-env.sh  create-worktree-and-codex.sh  create-worktree-with-env.sh  setup.sh
typescript/: .env.example  .prettierignore  AGENTS.md  Dockerfile  Makefile  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.mts  vitest.config.ts
(+1905 files in other folders)
