[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/domain",
    "crates/infra",
    "crates/shared",
    "crates/worker",
    "apps/api",
    "apps/worker",
]
default-members = ["apps/api"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
