[package]
name = "linklynx_backend"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
linklynx_message_api = { path = "../../crates/contracts/message-api" }
linklynx_message_domain = { path = "../../crates/domains/message" }
linklynx_protocol_events = { path = "../../crates/contracts/protocol-events" }
linklynx_protocol_ws = { path = "../../crates/contracts/protocol-ws" }
linklynx_platform_postgres_message = { path = "../../crates/platform/postgres/message" }
linklynx_platform_scylla_message = { path = "../../crates/platform/scylla/message" }
linklynx_shared = { path = "../../crates/shared" }
percent-encoding.workspace = true
reqwest.workspace = true
scylla.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.28"
