[package]
name = "linklynx_postgres_message"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
linklynx_message_api = { path = "../../../contracts/message-api" }
linklynx_message_domain = { path = "../../../domains/message" }
linklynx_shared = { path = "../../../shared" }
tokio-postgres.workspace = true
